Add instructions for creating Vault Secret ID / GitHub Token (elastic/x-pack-elasticsearch#761)
The instructions over in elastic/infra are more geared toward the infra team.

Original commit: elastic/x-pack-elasticsearch@1c5125d9bc68a4a1d0794afcd70dd42e0f4df770

--- a/README.asciidoc
+++ b/README.asciidoc
@@ -1,19 +1,49 @@
-= Elasticsearch X Pack
+= Elasticsearch X-Pack
 
-A set of Elastic's commercial plugins:
+A set of Elastic's commercial plugins for Elasticsearch:
 
 - License
 - Security
 - Watcher
 - Monitoring
 - Machine Learning
+- Graph
 
 = Setup
-You must checkout x-pack and elasticsearch with a specific directory structure. The
-elasticsearch checkout will be used when building x-pack. The structure is:
+
+You must checkout `x-pack-elasticsearch` and `elasticsearch` with a specific directory structure. The
+`elasticsearch` checkout will be used when building `x-pack-elasticsearch`. The structure is:
 
 - /path/to/elastic/elasticsearch
 - /path/to/elastic/elasticsearch-extra/x-pack-elasticsearch
+
+== Vault Secret
+
+The build requires a Vault Secret ID. You can use a GitHub token by following these steps:
+
+1. Go to https://github.com/settings/tokens
+2. Click *Generate new token*
+3. Set permissions to `read:org`
+4. Copy the token into `~/.elastic/github.token`
+5. Set the token's file permissions to `600`
+
+```
+$ mkdir ~/.elastic
+$ vi ~/.elastic/github.token
+# Add your_token exactly as it is into the file and save it
+$ chmod 600 ~/.elastic/github.token
+```
+
+If you do not create the token, then you will see something along the lines of this as the failure when trying to build X-Pack:
+
+```
+* What went wrong:
+Missing ~/.elastic/github.token file or VAULT_SECRET_ID environment variable, needed to authenticate with vault for secrets
+```
+
+=== Offline Mode
+
+When running the build in offline mode (`--offline`), it will not required to have the vault secret setup.
 
 == Native Code
 
@@ -51,17 +81,16 @@ gradle clean check
 gradle clean integTest
 -----
 
-- Package X-Pack (wihtout running tests)
+- Package X-Pack (without running tests)
 +
 [source, txt]
 -----
 gradle clean assemble
 -----
 
-- Install X-Pack (wihtout running tests)
+- Install X-Pack (without running tests)
 +
 [source, txt]
 -----
 gradle clean install
 -----
-
