[DOCS] Multiple fixes related to privileges in ML documentation (elastic/x-pack-elasticsearch#1110)
* [DOCS] Add privilege requirements to ML API docs

* [DOCS] Document ML cluster-level privileges

Original commit: elastic/x-pack-elasticsearch@221c67d3955a24771b3f701bad6172dee6e9ff90

--- a/docs/en/ml/getting-started.asciidoc
+++ b/docs/en/ml/getting-started.asciidoc
@@ -133,9 +133,8 @@ locally, go to `http://localhost:5601/`. To use the {ml} features,
 you must log in as a user who has the `kibana_user`
 and `monitor_ml` roles (TBD).
 
-. Click **Machine Learning** in the side navigation.
-
-//image::images/ml.jpg["Job Management"]
+. Click **Machine Learning** in the side navigation:
+image::images/ml.jpg["Job Management"]
 
 You can choose to create single-metric, multi-metric, or advanced jobs in Kibana.
 
