--- a/docs/en/rest-api/ml/get-datafeed.asciidoc
+++ b/docs/en/rest-api/ml/get-datafeed.asciidoc
@@ -10,17 +10,20 @@ data feeds.
 `GET _xpack/ml/datafeeds/` +
 
 `GET _xpack/ml/datafeeds/<feed_id>`
-////
+
 ===== Description
 
-OUTDATED?: The get job API can also be applied to all jobs by using `_all` as the job name.
-////
+You must have `monitor_ml`, `monitor`, `manage_ml`, or `manage` cluster
+privileges to use this API. For more information, see <<privileges-list-cluster>>.
+
+//TBD: The get job API can also be applied to all jobs by using `_all` as the job name.
+
 ===== Path Parameters
 
 `feed_id`::
   (string) Identifier for the data feed.
   If you do not specify this optional parameter, the API returns information
-  about all data feeds that you have authority to view.
+  about all data feeds.
 
 ===== Results
 
