--- a/docs/en/rest-api/ml/jobcounts.asciidoc
+++ b/docs/en/rest-api/ml/jobcounts.asciidoc
@@ -21,19 +21,22 @@ or old results are deleted, the job counts are not reset.
 
 `state`::
   (string) The status of the job, which can be one of the following values:
-  `open`::: The job is actively receiving and processing data.
   `closed`::: The job finished successfully with its model state persisted.
-  The job is still available to accept further data.
-  `closing`::: TBD
-  `failed`::: The job did not finish successfully due to an error.
-  This situation can occur due to invalid input data. In this case,
-  sending corrected data to a failed job re-opens the job and
-  resets it to an open state.
-
+  The job is still available to accept further data. +
++
+--
 NOTE: If you send data in a periodic cycle and close the job at the end of
 each transaction, the job is marked as closed in the intervals between
 when data is sent. For example, if data is sent every minute and it takes
 1 second to process, the job has a closed state for 59 seconds.
+
+--
+  `closing`::: TBD. The job is in the process of closing?
+  `failed`::: The job did not finish successfully due to an error.
+  This situation can occur due to invalid input data. In this case,
+  sending corrected data to a failed job re-opens the job and
+  resets it to an open state.
+  `open`::: The job is actively receiving and processing data.
 
 [float]
 [[ml-datacounts]]
@@ -142,15 +145,19 @@ The `model_size_stats` object has the following properties:
   TBD
 
 `total_by_field_count`::
-  (long) The number of `by` field values that were analyzed by the models.
-
+  (long) The number of `by` field values that were analyzed by the models. +
++
+--
 NOTE: The `by` field values are counted separately for each detector and partition.
 
+--
 `total_over_field_count`::
-  (long) The number of `over` field values that were analyzed by the models.
-
+  (long) The number of `over` field values that were analyzed by the models. +
++
+--
 NOTE: The `over` field values are counted separately for each detector and partition.
 
+--
 `total_partition_field_count`::
   (long) The number of `partition` field values that were analyzed by the models.
 
