Adding limitations of Watch Edit page (elastic/x-pack-elasticsearch#1014)
* Adding limitations of Watch Edit page

* Removing image reference for now until image dir referencing is sorted out

* More end-user-friendly phrasing

* Language changes + bringing back image

Original commit: elastic/x-pack-elasticsearch@06bf93ee99a262c0d998c6f36846bdbee21f1f25

--- a/docs/en/watcher/limitations.asciidoc
+++ b/docs/en/watcher/limitations.asciidoc
@@ -9,3 +9,12 @@ if you change the script on the filesystem.
 
 Currently, the only way to reload a file script in a watch is to delete 
 the watch and recreate it.
+
+[float]
+=== Watcher UI
+
+When you create a new watch or edit an existing watch, if you navigate away
+from the page without saving your changes they will be lost without warning. 
+Make sure to save your changes before leaving the page.
+
+image::watcher-ui-edit-watch.png[]
