--- a/docs/en/security/authentication.asciidoc
+++ b/docs/en/security/authentication.asciidoc
@@ -22,7 +22,7 @@ Please read <<reset-built-in-user-passwords,Reset Built-in User Passwords>> and
 .{security} Built-in Users
 |========
 | Name               | Description
-| `elastic`          | A built-in <<built-in-roles-superuser, _superuser_>>.
+| `elastic`          | A built-in _superuser_. See <<built-in-roles>>.
 | `kibana`           | The user Kibana uses to connect and communicate with Elasticsearch.
 | `logstash_system`  | The user Logstash uses when storing monitoring information in Elasticsearch.
 |========
@@ -39,7 +39,7 @@ You can update passwords from the *Management > Users* UI in Kibana or with the
 
 [source,js]
 ---------------------------------------------------------------------
-PUT _xpack/security/user/elastic/_password 
+PUT _xpack/security/user/elastic/_password
 {
   "password": "elasticpassword"
 }
@@ -48,7 +48,7 @@ PUT _xpack/security/user/elastic/_password
 
 [source,js]
 ---------------------------------------------------------------------
-PUT _xpack/security/user/kibana/_password 
+PUT _xpack/security/user/kibana/_password
 {
   "password": "kibanapassword"
 }
@@ -168,8 +168,8 @@ NOTE: Some systems (e.g. Active Directory) have a temporary lock-out period afte
 
 The default realm chain contains the `native` and `file` realms. To explicitly,
 configure a realm chain, you specify the chain in `elasticsearch.yml`. When you
-configure a realm chain, only the realms you specify are used for authentication. 
-To use the `native` and `file` realms, you must include them in the chain. 
+configure a realm chain, only the realms you specify are used for authentication.
+To use the `native` and `file` realms, you must include them in the chain.
 
 The following snippet configures a realm chain that includes the `file` and
 `native` realms, as well as two LDAP realms and an Active Directory realm.
