[DOCS] Re-enable XPack doc testing (elastic/x-pack-elasticsearch#1146)
Adds a gradle build for documentation testing, partially stolen from the xpack meta repo. Updated to make work with the current setup

index.asciidoc was updated/enabled as a test, and various pre-existing tests appear to be working. There are a large number of tests still ignored due to missing proper // CONSOLE tags

Original commit: elastic/x-pack-elasticsearch@1d596f0be36756e7f546d6af77144253c2ea99a3

--- a/docs/en/rest-api/ml/delete-snapshot.asciidoc
+++ b/docs/en/rest-api/ml/delete-snapshot.asciidoc
@@ -49,7 +49,7 @@ DELETE _xpack/ml/anomaly_detectors/farequote/model_snapshots/1491948163
 // TEST[skip:todo]
 
 When the snapshot is deleted, you receive the following results:
-
+[source,js]
 ----
 {
   "acknowledged": true
