[DOCS] Add ML limitations (elastic/x-pack-elasticsearch#1229)
* [DOCS] Add ML limitations

* [DOCS] Address feedback about ML limitations

* [DOCS] Change ML limitations capitalization

Original commit: elastic/x-pack-elasticsearch@41682d8d937fd506ff71a2a9583118824250cf62

--- a/docs/en/ml/getting-started.asciidoc
+++ b/docs/en/ml/getting-started.asciidoc
@@ -327,9 +327,16 @@ Machine learning jobs contain the configuration information and metadata
 necessary to perform an analytical task. They also contain the results of the
 analytical task.
 
-NOTE: This tutorial uses {kib} to create jobs and view results, but you can
-alternatively use APIs to accomplish these tasks.
+[NOTE]
+--
+This tutorial uses {kib} to create jobs and view results, but you can
+alternatively use APIs to accomplish most tasks.
 For API reference information, see <<ml-apis>>.
+
+The {xpack} {ml} features in {kib} use pop-ups. You must configure your
+web browser so that it does not block pop-up windows or create an
+exception for your Kibana URL.
+--
 
 To work with jobs in {kib}:
 
