[DOCS] ML 5.4 docs final tuning (elastic/x-pack-elasticsearch#1265)
Original commit: elastic/x-pack-elasticsearch@91e4af140d90e12c2fa09b36d87d0cdf3c2b083a

--- a/docs/en/ml/getting-started.asciidoc
+++ b/docs/en/ml/getting-started.asciidoc
@@ -21,8 +21,8 @@ will hopefully be inspired to use it to detect anomalies in your own data.
 
 You might also be interested in these video tutorials:
 
-* Getting started with machine learning (single metric)
-* Getting started with machine learning (multiple metric)
+* https://www.elastic.co/videos/machine-learning-tutorial-creating-a-single-metric-job[Machine Learning for the Elastic Stack: Creating a single metric job]
+* https://www.elastic.co/videos/machine-learning-tutorial-creating-a-multi-metric-job[Machine Learning for the Elastic Stack: Creating a multi-metric job]
 
 
 [float]
